# workshop-parallel

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
counter/: CMakeLists.txt
counter/src/: atomic.c  atomic_opt.c  mutex.c  mutex_opt.c  no_sync.c  no_sync_test.c  omp.c  omp_no_sync.c  spinlock.c
openmp/: CMakeLists.txt
openmp/src/: multiplication.c
philosophers/: CMakeLists.txt
philosophers/src/: main.c
synchronization/: CMakeLists.txt
synchronization/src/: main.c
